--- a/src/main/resources/assets/nabb/lang/en_US.lang
+++ b/src/main/resources/assets/nabb/lang/en_US.lang
@@ -1,1 +1,5 @@
 nabb.subtitle.bee_squelch=Bees Squishing
+recreational_bee_smushing=Recreational Bee Smushing
+recreational_bee_smushing.tooltip=Enabling this lets you smush any two bees together. Queens will only be produced if the two bees being smushed can produce a Queen.
+recreational_bee_smushing_kills=Deadly Recreational Bee Smushing
+recreational_bee_smushing_kills.tooltip=Does Recreational Bee Smushing kill the bees?
