--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,1 @@
-Switched breed timing to be handled by the server
-Improved network handling
-Added the option to instantly smush bees.
+Use Quark's clap emote when smushing bees.
